add node capability to peer updates
